k8s/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
---
# https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fullstack-app
  namespace: production
spec:
  selector:
    matchLabels:
      app: fullstack-app # has to match .spec.template.metadata.labels
  serviceName: "fullstack-app"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: fullstack-app # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: fullstack-app
          image: pinoched/rdicidr:latest
          ports:
            - containerPort: 8080
              name: fullstack-app
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: fullstack-service
  namespace: production
spec:
  selector:
    app: fullstack-app
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-ingress
  namespace: production
spec:
  rules:
    - host: fsl-challenge.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fullstack-service
                port:
                  number: 8080
